@@ -1,3 +1,4 @@
+* Allow to cast to date with timezone
 * Support create/delete attribute in view
 * Skip default values when copying records
 * Use global cache for Function fields in readonly transactions
